--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,12 @@
-<footer class="site-footer">
+<div class="container footer">
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
+  <div class="row">
+    <div class="col-sm-4">
+      <h2 class="footer-heading">{{ site.title }}</h2>
+      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+    </div>
+    <div class="col-sm-4">
+      <ul class="social-media-list">
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
@@ -24,14 +18,11 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+      </ul>
     </div>
-
+    <div class="col-sm-4">
+      <p>{{ site.description }}</p>
+    </div>
   </div>
 
-</footer>
+</div>
