--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,16 @@
   {% include head.html %}
 
   <body>
-
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="container main-content">
+      <div class="page-content">
         {{ content }}
       </div>
+
+      
     </div>
-
     {% include footer.html %}
-
   </body>
 
 </html>
